ops/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicepro-app
spec:
  selector:
    app: servicepro-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
