ops/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servicepro-ingress
spec:
  rules:
    - host: servicepro.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: servicepro-app
                port:
                  number: 80
